@@ -62,6 +62,7 @@
 - fix dead LDAP symbolic link when LDAP support is disabled.
 - fix compilation of lookup_ldap.c without sasl.
 - wait for master map available at start.
+- add master read wait option.
 
 25/07/2012 autofs-5.0.7
 =======================
